compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__import_module_twice.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4044
expression: "import gleam/wibble as a\nimport gleam/wibble as b\n\npub fn main() {\n  a.wobble() + b.wobble()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub fn wobble() { 1 }

-- main.gleam
import gleam/wibble as a
import gleam/wibble as b

pub fn main() {
  a.wobble() + b.wobble()
}


----- WARNING
warning: Duplicate import
  ┌─ /src/warning/wrn.gleam:2:1
  │
1 │ import gleam/wibble as a
  │ ------------------------ First imported here
2 │ import gleam/wibble as b
  │ ^^^^^^^^^^^^^^^^^^^^^^^^ Reimported here

The gleam/wibble module has been imported twice.
