compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__incomplete_code_block_raises_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2886
expression: "\npub fn main() {\n    {}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    {}
}


----- WARNING
warning: Incomplete block
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │     {}
  │     ^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
A block must always contain at least one expression.
